--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -72,3 +72,14 @@ textarea {
 @import './components/contact';
 @import './components/footer';
 @import './components/themesToggler';
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
